UD3 Complete War! Card game — full game loop, card images, game modes, timer